# re-generate

./: README.md  pyproject.toml  setup.py
re_generate/: __init__.py  cfg_constants.py  classes.py  constants.py  generator.py  handlers.py
tests/: test_generator.py  test_other.py
